--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,11 @@
   padding: 16px;
 }
 
+.App a {
+  font-weight: bold;
+  text-decoration: none;
+}
+
 .App footer {
   font-size: 11px;
   margin: 10px auto;
